<resources>
    <string name="app_name">HouseTrinder</string>
    <string name="melhor_oferta">Melhor Oferta</string>
    <string name="chat">chat</string>
    <string name="home">home</string>
    <string name="Search">search</string>
    <string name="welcome">Benvindo ao House Trinder </string>
    <string name="facebook_app_id">427148987754367</string>
    <string name="fb_login_protocol_scheme">fb427148987754367</string>
    <string name="preferences">Preferencias</string>
    <string name="Ajuste">Ajuste suas preferencias para encontrar seu colega de quarto ideal</string>

    <string-array name="leitura">
        <item>@string/gibi</item>
        <item>@string/anime</item>
        <item>@string/romances</item>
        <item>@string/aventura</item>
        <item>@string/poesia</item>
        <item>@string/teatro</item>
    </string-array>


    <!--
    <array name="leitura_drawable">
        <item>@drawable/comics</item>
        <item>@drawable/anime</item>
        <item>@drawable/romance</item>
        <item>@drawable/aventura</item>
        <item>@drawable/poesia</item>
        <item>@drawable/teatro</item>

    </array>
    -->

    <string-array name="esporte">
        <item>@string/futebol</item>
        <item>@string/natacao</item>
        <item>@string/voleibol</item>
        <item>@string/basquete</item>
        <item>@string/tennis</item>
        <item>@string/luta</item>
        <item>@string/skate</item>
        <item>@string/corrida</item>
        <item>@string/handball</item>
    </string-array>


    <integer name="facebookAccount">2</integer>
    <string-array name="esporte_URL">
        <item>https://cdn.icon-icons.com/icons2/553/PNG/512/footbal_icon-icons.com_53569.png</item>
        <item>https://cdn.icon-icons.com/icons2/37/PNG/512/swimming_sport_3640.png</item>
        <item>https://images.vexels.com/media/users/3/130632/isolated/preview/e29d144e39e8179ad0cb0c4b58ccc173-voleibol-brilhante-by-vexels.png</item>
        <item>https://cdn.icon-icons.com/icons2/1194/PNG/512/1490886333-37-basketball_82467.png</item>
        <item>https://cdn2.iconfinder.com/data/icons/summer-olympic-sport/256/tennis-512.png</item>
        <item>https://cdn.icon-icons.com/icons2/851/PNG/512/fight_icon-icons.com_67557.png</item>
        <item>https://cdn4.iconfinder.com/data/icons/sport-17/64/skateboarding-512.png</item>
        <item>https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRj0PwHyqknx75gJWOnT8vOifmaIv3w6wyLu-OeMrduz4mCfx7XtQ</item>
        <item>https://cdn3.iconfinder.com/data/icons/common-sports/4096/handball-512.png</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="question1">Quão organizado gostaria que seu colega fosse?</string>
    <string name="extremosOrganizado">(0-Desorganizado até 5-Organizado)</string>
    <string name="muito_desorganizado">Muito desorganizado</string>
    <string name="desorganizado">Desorganizado</string>
    <string name="normal">Normal</string>
    <string name="organizado">Organizado</string>
    <string name="muito_organizado">Muito Organizado</string>
    <string name="question2">Qual frequência seu colega pode trazer visitas?</string>
    <string name="nunca">Nunca</string>
    <string name="raramente">Raramente</string>
    <string name="as_vezes">De vez em quando</string>
    <string name="sempre">Sempre</string>
    <string name="frequentemente">Frequentemente</string>
    <string name="question3">Qual nível sonoro de seu colega é aceitável?</string>
    <string name="silencioso">Silencioso</string>
    <string name="discreto">Discreto</string>
    <string name="notavel">Notável</string>
    <string name="barulhento">Barulhento</string>
    <string name="question4">Qual frequência você gosta de sair?</string>
    <string name="proximo">proximo</string>
    <string name="interesses">Interesses</string>
    <string name="interesses_titulo">Quais são seus interesses?</string>
    <string name="esporte">Esporte</string>
    <string name="video_game">VideoGame</string>
    <string name="arte">Arte</string>
    <string name="musica">Musica</string>
    <string name="netflix">Netflix</string>
    <string name="teatro">Teatro</string>
    <string name="televisao">Televisão</string>
    <string name="leitura">Leitura</string>
    <string name="save">Salvar</string>
    <string name="futebol">Futebol</string>
    <string name="natacao">Natação</string>
    <string name="voleibol">Voleibol</string>
    <string name="basquete">Basquete</string>
    <string name="tennis">Tennis</string>
    <string name="gibi">Gibi</string>
    <string name="anime">Animê</string>
    <string name="romances">Romantico</string>
    <string name="aventura">Aventura</string>
    <string name="poesia">Poesia</string>
    <string name="luta">Luta</string>
    <string name="skate">Skate</string>
    <string name="corrida">Corrida</string>
    <string name="handball">Handball</string>
    <string name="prompt_password_confirmation">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="birthDate">Birthday</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="emailFormatError">Email format wrong</string>
    <string name="passwordMatchError">Passwords does not match</string>
    <string name="nameError">Please enter a valid name</string>

    <string-array name="theme">

        <item>@string/esporte</item>
        <item>@string/leitura</item>
        <item>@string/arte</item>
        <item>@string/video_game</item>
        <item>@string/musica</item>
        <item>@string/teatro</item>
        <item>@string/televisao</item>
        <item>@string/netflix</item>


    </string-array>

    <integer-array name="theme_resource">
        <item>@array/esporte</item>
        <item>@array/leitura</item>
        <item>@array/esporte</item>
        <item>@array/esporte</item>
        <item>@array/esporte</item>
        <item>@array/esporte</item>
        <item>@array/esporte</item>
        <item>@array/esporte</item>
    </integer-array>

    <integer-array name="theme_resource_drawable">
        <item>@array/esporte_URL</item>
        <item>@array/esporte_URL</item>
        <item>@array/esporte_URL</item>
        <item>@array/esporte_URL</item>
        <item>@array/esporte_URL</item>
        <item>@array/esporte_URL</item>
        <item>@array/esporte_URL</item>

    </integer-array>


</resources>
